<resources>
    <string name="app_name">Сalculator</string>
    <string name="btn_0">0</string>
    <string name="text_dot">.</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="text_equals">=</string>
    <string name="text_add">+</string>
    <string name="btn_min">-</string>
    <string name="btn_mul">*</string>
    <string name="btn_dev">/</string>
    <string name="btn_ac">DEL</string>
    <string name="btn_settings">Settings</string>
    <string name="text">Res</string>
    <string name="history">History</string>
    <string name="del_text">DEL</string>
    <string name="theme_one">Theme One</string>
    <string name="theme_two">Theme Two</string>
    <string name="theme_three">Theme Three</string>
</resources>