<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="10dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_dot"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/equals"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_equals"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/btn_0"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/equals"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/btn_add"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/text_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintWidth_percent=".17" />

    <Button
        android:id="@+id/btn_7"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_7"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/btn_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/btn_8"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_8"
        app:layout_constraintBottom_toTopOf="@+id/equals"
        app:layout_constraintEnd_toStartOf="@+id/btn_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/btn_9"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_9"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_min"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/btn_min"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_min"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_9"
        app:layout_constraintStart_toStartOf="@+id/btn_add"
        app:layout_constraintWidth_percent=".17" />

    <Button
        android:id="@+id/btn_4"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_7"
        app:layout_constraintEnd_toEndOf="@+id/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/btn_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/btn_5"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_5"

        app:layout_constraintBottom_toTopOf="@+id/btn_8"
        app:layout_constraintEnd_toEndOf="@+id/btn_8"
        app:layout_constraintEnd_toStartOf="@+id/bnt_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/bnt_6"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_6"
        app:layout_constraintBottom_toTopOf="@+id/btn_9"
        app:layout_constraintEnd_toEndOf="@+id/btn_9"
        app:layout_constraintEnd_toStartOf="@+id/bnt_mul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/bnt_mul"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_mul"
        app:layout_constraintBottom_toTopOf="@+id/btn_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bnt_6"
        app:layout_constraintStart_toStartOf="@+id/btn_min"
        app:layout_constraintWidth_percent=".17" />

    <Button
        android:id="@+id/btn_1"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_4"
        app:layout_constraintEnd_toEndOf="@+id/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/bnt_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/bnt_2"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_5"
        app:layout_constraintEnd_toEndOf="@+id/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/btn_3"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_3"
        app:layout_constraintBottom_toTopOf="@+id/bnt_6"
        app:layout_constraintEnd_toEndOf="@+id/bnt_6"
        app:layout_constraintEnd_toStartOf="@+id/btn_dev"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bnt_2"
        app:layout_constraintStart_toStartOf="@+id/bnt_6"
        app:layout_constraintWidth_percent=".27" />

    <Button
        android:id="@+id/btn_dev"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_dev"
        app:layout_constraintBottom_toTopOf="@+id/bnt_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_3"
        app:layout_constraintStart_toStartOf="@+id/bnt_mul"
        app:layout_constraintWidth_percent=".16" />

    <Button
        android:id="@+id/btn_ac"
        style="@style/Button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_ac"


        app:layout_constraintBottom_toTopOf="@+id/btn_dev"
        app:layout_constraintEnd_toEndOf="@+id/btn_dev"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/btn_dev"
        app:layout_constraintWidth_percent=".17" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text"
        android:gravity="end|bottom"
        android:textSize="40sp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/bnt_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_ac"
        app:layout_constraintStart_toStartOf="@+id/btn_1"
        app:layout_constraintTop_toTopOf="@+id/btn_ac"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:textSize="40sp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/btn_ac"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button_style"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>